# ai-thesis-monitor

./: .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260413_0001_core_schema.py  20260413_0002_analytics_schema.py
docs/superpowers/plans/: 2026-04-13-ai-thesis-monitor-v1-addendum.md  2026-04-13-ai-thesis-monitor-v1.md  2026-04-13-task-11-replay-plan.md
docs/superpowers/specs/: 2026-04-13-ai-thesis-monitor-v1-design.md  2026-04-13-task-11-replay-design.md
src/ai_thesis_monitor/: __init__.py
src/ai_thesis_monitor/api/: __init__.py  app.py  deps.py
src/ai_thesis_monitor/api/routes/: __init__.py  (+6 more)
src/ai_thesis_monitor/app/: __init__.py  db.py  logging.py  settings.py
src/ai_thesis_monitor/cli/: __init__.py  main.py
src/ai_thesis_monitor/db/: __init__.py
src/ai_thesis_monitor/domain/: __init__.py
src/ai_thesis_monitor/ops/: __init__.py
tests/: conftest.py
tests/fixtures/fred/: UNRATE.csv
tests/fixtures/rss/: labor_claims.xml
tests/integration/api/: test_read_routes.py
tests/integration/db/: test_seed_reference_data.py
tests/integration/ingestion/: test_structured_pipeline.py  test_text_pipeline.py
tests/integration/pipelines/: test_replay_pipeline.py
tests/unit/: test_cli_smoke.py
tests/unit/api/: test_health.py
tests/unit/app/: test_settings.py
tests/unit/db/: test_analytics_models.py  test_core_models.py
tests/unit/domain/: test_features.py  test_narratives.py  test_scoring.py  test_tripwires.py
tests/unit/ingestion/: test_structured_parser.py  test_weekly_pipeline.py
(+34 files in other folders)
