[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-thesis-monitor"
dynamic = ["version"]
description = "Runtime primitives for tracking AI thesis deployments."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AI Thesis Monitor Maintainers" }
]
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.0",
    "pybreaker>=1.4.0",
    "sqlalchemy>=2.0.40",
    "tenacity>=9.1.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
"ai-thesis-monitor" = "ai_thesis_monitor.cli.main:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "ai_thesis_monitor.__version__" }
